replace remaining Paths.get() with Path.of() in the updated files